# open-vm-tools

./: 0001-Handle-new-cloud-init-error-code.patch  10310-Properly-check-authorization-on-incoming-guestOps-r.patch  1125-Properly-check-authorization-on-incoming-guestOps-re.patch  1205-Properly-check-authorization-on-incoming-guestOps-re.patch  2023-20867-Remove-some-dead-code-1030-10310.patch  2023-20867-Remove-some-dead-code-1100-1105.patch  2023-20867-Remove-some-dead-code-1110-1125.patch  2023-20867-Remove-some-dead-code.patch  CVE-2025-22247-1100-1225-VGAuth-updates.patch  CVE-2025-41244-1120-1135-SDMP.patch  CVE-2025-41244-1200-1225-SDMP.patch  CVE-2025-41244-1230-1235-SDMP.patch  CVE-2025-41244-1240-1300-SDMP.patch  DESCR  LICENSE  Makefile  PLIST  README.md  ReleaseNotes.md  distinfo  options.mk
open-vm-tools/: .gitignore  AUTHORS  ChangeLog  FILES  LICENSE  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  tools.conf
open-vm-tools/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
open-vm-tools/checkvm/: Makefile.am  Makefile.in  Outlook  checkvm.c  checkvm_version.h
open-vm-tools/common-agent/etc/: Makefile.am
open-vm-tools/common-agent/input/: Makefile.am  installProviderHeader.sh
open-vm-tools/common-agent/schemas/: xenc-schema.xsd
open-vm-tools/config/: ltmain.sh
open-vm-tools/docs/: Makefile.am  Makefile.in
open-vm-tools/docs/api/: Makefile.am  Makefile.in  doxygen.conf
open-vm-tools/guestd/: Makefile.am  Makefile.in  foreignVMToolsDaemon.c  foreignVMToolsDaemon.h  foreignVMToolsNetworking.c  foundryToolsDaemon.c  foundryToolsDaemon.h  guestd_version.h  main.c  toolsDaemon.c  toolsDaemon.h
open-vm-tools/guestproxycerttool/: Makefile.am  Makefile.in  cert_key.c  cert_key.h  cert_tool.c  cert_tool_version.h  cert_util.c  cert_util.h
open-vm-tools/hgfsclient/: Makefile.am  Makefile.in  hgfsclient.c  hgfsclient_version.h  stub.c
open-vm-tools/hgfsmounter/: Makefile.am  Makefile.in  hgfsmounter.c  hgfsmounter_version.h  stub-user-util.c  stub.c
open-vm-tools/lib/: Makefile.am  Makefile.in
open-vm-tools/lib/SLPv2Parser/: Makefile.am  Makefile.in  SLPv2Match.c  SLPv2MsgAssembler.c  SLPv2MsgParser.c
open-vm-tools/lib/appUtil/: Makefile.am  Makefile.in  appUtil.c  appUtilX11.c
open-vm-tools/lib/asyncsocket/: Makefile.am  Makefile.in  asyncSocketBase.c  (+5 more)
open-vm-tools/libDeployPkg/: Makefile.am  Makefile.in  deployPkgFormat.h  libDeployPkg.pc.in  libDeployPkg_version.h  linuxDeployment.c  linuxDeploymentUtilities.c  linuxDeploymentUtilities.h  mspackConfig.h  mspackWrapper.c  mspackWrapper.h  processPosix.c  toolsDeployPkg.h
open-vm-tools/libappmonitor/: Makefile.am  appmonitor.pc.in  stub-debug.c  vmGuestAppMonitorLib.c  vmGuestAppMonitorLibInt.h  vmguestappmonitorlib_version.h
open-vm-tools/libguestStoreClient/: Makefile.am  guestStoreClientLib.c  guestStoreClientLibInt.h  gueststoreclientlib_version.h
open-vm-tools/libguestlib/: Makefile.am  Makefile.in  guestSDKLog.c  guestlibIoctl.x  guestlibV3.x  stubs.c  vmGuestLib.c  vmGuestLibInt.h  vmGuestLibPanic.c  vmguestlib.pc.in  vmguestlib_version.h
open-vm-tools/libhgfs/: Makefile.am  Makefile.in  hgfslib.c
open-vm-tools/libvmtools/: Makefile.am  Makefile.in  fileLogger.c  guestSDKLog.c  i18n.c  monotonicTimer.c  signalSource.c  stdLogger.c  sysLogger.c  vmtools.c  vmtoolsConfig.c  vmtoolsInt.h  vmtoolsLog.c  vmtoolsMisc.c  vmtoolslib_version.h  vmxLogger.c
open-vm-tools/m4/: vmtools.m4
open-vm-tools/modules/: Makefile.am  Makefile.in
open-vm-tools/namespacetool/: Makefile.am  namespacetool.c
open-vm-tools/pam/: debian  generic  redhat  suse
open-vm-tools/rpctool/: Makefile.am  Makefile.in  rpctool.c
open-vm-tools/scripts/: Makefile.am  Makefile.in
open-vm-tools/services/: Makefile.am  Makefile.in
open-vm-tools/tests/: Makefile.am  Makefile.in
open-vm-tools/toolbox/: Makefile.am  Makefile.in  bigIcon.xpm  debugStdio.c  messages.h  smallIcon.xpm  stub.c  toolbox-cmd.c  toolbox-gtk.c  toolboxAbout.c  toolboxCmdInt.h  toolboxDevices.c  toolboxGtkInt.h  toolboxInt.c  toolboxInt.h  toolboxOptions.c  toolboxRecord.c  toolboxScripts.c  toolboxShrink.c  toolboxcmd-config.c  toolboxcmd-devices.c  toolboxcmd-globalconf.c  toolboxcmd-gueststore.c  toolboxcmd-info.c  toolboxcmd-logging.c  toolboxcmd-record.c  toolboxcmd-scripts.c  toolboxcmd-shrink.c  toolboxcmd-stat.c  toolboxcmd-time.c  toolboxcmd_version.h  toolboxgtk_version.h
open-vm-tools/udev/: 99-vmware-nvme-udev.rules  99-vmware-scsi-udev.rules  Makefile.am
open-vm-tools/vgauth/: Makefile.am  Makefile.in
open-vm-tools/vgauthImport/: Makefile.am  vgauthImport.c
open-vm-tools/vmblock-fuse/: Makefile.am  Makefile.in  block.c  block.h  design.txt  fsops.c  fsops.h  main.c  os.h  stubs.c  stubs.h  util.c
open-vm-tools/vmblockmounter/: Makefile.am  Makefile.in  vmblockmounter.c  vmblockmounter_version.h
open-vm-tools/vmhgfs-fuse/: Makefile.am  bdhandler.c  bdhandler.h  cache.c  cache.h  config.c  config.h  dir.c  file.c  file.h  filesystem.c  filesystem.h  fsutil.c  fsutil.h  link.c  main.c  module.h  request.c  request.h  session.c  session.h  transport.c  transport.h  vmhgfs_version.h
open-vm-tools/vmware-user/: Makefile.am  Makefile.in  copyPaste.c  copyPasteDnDWrapper.cpp  copyPasteDnDWrapper.h  copyPasteUI.cpp  copyPasteUI.h  copyPasteV3.h  copyPasteWrapper.cpp  copyPasteWrapper.h  debugStdio.c  dnd.c  dndUI.cpp  dndUI.h  dragDetWnd.cpp  dragDetWnd.h  foreignVMToolsDaemon.c  foreignVMToolsDaemon.h  foreignVMToolsNetworking.c  foundryToolsDaemon.c  foundryToolsDaemon.h  libvmwarectrl.h  modconfig.c  notify.c  pointer.c  resolution.c  stub.c  vmware-user.c  vmware-user.cpp  vmwarectrl.h  vmwareuserInt.h  vmwareuser_version.h
open-vm-tools/vmware-user-suid-wrapper/: Makefile.am  Makefile.in  locationsdb.c  main.c  vmware-user.desktop.in  wrapper-freebsd.c  wrapper-linux.c  wrapper-solaris.c  wrapper.h  wrapper_version.h
open-vm-tools/vmwgfxctrl/: Makefile.am  main.c
open-vm-tools/xferlogs/: Makefile.am  Makefile.in  xferlogs.c  xferlogs_version.h
(+3707 files in other folders)
